# ReadExcelOpenXLSX

./: .gitignore  Abono_MAYO 2024.txt  Abono_MAYO 2024.xlsx  CMakeLists.txt  Facturacion MAYO 2024 OK.txt  Facturacion MAYO 2024 OK.xlsx  Makefile  NumClients.csv  README.md  compras wop_mayo 2024.txt  compras wop_mayo 2024.xlsx  conf_abonaments.txt  conf_compres_wop.txt  conf_ventes.txt  conf_ventes_nou.txt  config.json  configuration.txt  deploy.bat  main.cpp
config/: conf_abonaments.txt  conf_compres_wop.txt  conf_ventes.txt
include/: csv_reader.h  help_functions.h  line_formater.h  parse_configurations.h
